--- a/www/css/style.css
+++ b/www/css/style.css
@@ -87,14 +87,140 @@ p.important_note {
   font-weight:bold;
 }
 
+
+/*======= index styles — desktop ======================================================================
+======================================================================================================*/
+
+
 #container {
-  position: relative;
   margin: 0 auto;
-  padding: 10px 10px 50px 10px;
-  width: 970px;
+  padding-top: 3em;
+  width: 1000px;
   max-width: 100%;
   box-sizing: border-box;
 }
+
+header{
+	position: relative;
+	margin: 1em auto;
+	width: 100%;
+}
+
+.intro{
+	margin: 0 auto;
+	width: 100%;
+	border-bottom: thin solid #999;
+	padding-bottom: 3em;
+}
+
+.intro h1{
+	font-size: 3em;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	color: #999;
+}
+
+.intro h3{
+	font-size: 1.8em;
+	line-height: 1.5em;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.intro p{
+	font-size: 1.2em;
+	line-height: 1.5em;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: lighter;
+}
+
+.content{
+	margin: 0 auto;
+	width: 45%;
+	float: left;
+}
+
+.content p{
+	font-size: 1.2em;
+	line-height: 1.5em;
+	margin-bottom: .4em;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: lighter;
+}
+
+form{
+	padding: 15px;
+	margin-top: 20px;
+	background-color: #afafaf;
+	width: 45%;
+	float: right;
+}
+
+form h5{
+	color: #333;
+}
+
+/* Placeholder styles */
+
+    input::-webkit-input-placeholder{
+        font-weight: lighter;
+        font-size: 1em;
+        color: #D3D2D2;
+    }
+
+    input::-moz-placeholder{
+        font-weight: lighter;
+        font-size: 1em;
+        color: #D3D2D2;
+    }
+
+    input:-moz-placeholder{
+        font-weight: lighter;
+        font-size: 1em;
+        color: #D3D2D2;
+    }
+
+    input::-ms-input-placeholder{
+        font-weight: lighter;
+        font-size: 1em;
+        color: #D3D2D2;
+    }
+
+    /* Field styles */
+
+    .standardinput{
+        margin: 1.5em auto;
+    }
+
+    #username{
+    	width: 100%;
+    	height: 2em;
+    }
+
+    #email{
+    	width: 100%;
+    	height: 2em;
+    }
+
+    #button{
+        text-align: center;
+        display: block;
+        margin: 3em 0 2em 0;
+    }
+
+    input[type=submit]{
+        padding: 3% 16%; 
+        background: #8DBDF6; 
+        border: 0 none;
+        cursor: pointer;
+        -webkit-border-radius: 0px;
+        border-radius: 0px; 
+        color: #FFF;
+    }
+
+
+/*======= index styles — desktop ======================================================================
+======================================================================================================*/
+
 
 .sigma-parent {
 	position: relative;
@@ -618,4 +744,3 @@ background-position: -45px -147px;
 cursor: pointer;
 display: none;
 }
-
